fixed overflow when uploading images.

--- a/aestheticscore-frontend/src/app/app.component.css
+++ b/aestheticscore-frontend/src/app/app.component.css
@@ -4,6 +4,8 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  width: auto;
+  overflow: hidden;
 }
 
 .content-wrapper {
@@ -17,6 +19,7 @@
   backdrop-filter: blur(7.4px);
   -webkit-backdrop-filter: blur(7.4px);
   border: 1px solid rgba(0, 0, 0, 0.1);
+  margin: 5vw; 
 }
 
 .content-wrapper::before{
